got picture and details to show on show_cars page, and fixed bug with bottom border overlapping content

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,16 +1,8 @@
 html {
-  height: 125%;
-  bottom: 0;
   background-color: #FFFFFF;
   border-bottom-style: solid;
   border-bottom-color: black;
   border-bottom-width: 150px;
-
-}
-
-footer {
-	position: absolute;
-	bottom: 0
 }
 
 h1 {
@@ -100,6 +92,14 @@ h3 {
   height: 96.8%;
 }
 
+#carshow {
+  width: 100%;
+  height: 100%;
+}
+
+#showcarstext {
+  font-size: 25px;
+}
 
 /*#bottomborder {
   width: 100%;
